RESOLVED FIXED 28166
DRT Doesn't support arguments for eventSender.mouseDown and eventSender.mouseUp
https://bugs.webkit.org/show_bug.cgi?id=28166
Summary DRT Doesn't support arguments for eventSender.mouseDown and eventSender.mouseUp
Brian Weinstein
Reported 2009-08-10 13:44:29 PDT
DRT Doesn't support arguments for eventSender.mouseDown and eventSender.mouseUp.
Attachments
Arguments to mouseDown and mouseUp (5.13 KB, patch)
2009-08-10 14:28 PDT, Brian Weinstein
no flags
Updated ChangeLog (5.26 KB, patch)
2009-08-10 16:06 PDT, Brian Weinstein
sam: review+
Brian Weinstein
Comment 1 2009-08-10 14:28:13 PDT
Created attachment 34515 [details] Arguments to mouseDown and mouseUp
Brian Weinstein
Comment 2 2009-08-10 15:33:58 PDT
Ignore the case for WM_XBUTTONUP - that is now gone.
Brian Weinstein
Comment 3 2009-08-10 16:06:39 PDT
Created attachment 34525 [details] Updated ChangeLog
Sam Weinig
Comment 4 2009-08-10 16:30:32 PDT
Comment on attachment 34525 [details] Updated ChangeLog > From f37c8033310a58a20aad13edc86b542a13537c60 Mon Sep 17 00:00:00 2001 > From: Brian Weinstein <bweinstein@apple.com> > Date: Mon, 10 Aug 2009 14:26:02 -0700 > Subject: [PATCH] 2009-08-10 Brian Weinstein <bweinstein@apple.com> > > Reviewed by NOBODY (OOPS!). > > Added support for DRT to support arguments for eventSender.mouseDown and eventSender.mouseUp. > https://bugs.webkit.org/show_bug.cgi?id=28166 This should note that this is for windows only. > > This is a step towards fixing fast/events/mouse-click-events.html. I believe you mean a step toward making it pass on windows.
Brian Weinstein
Comment 5 2009-08-12 10:01:02 PDT
Note You need to log in before you can comment on or make changes to this bug.