2009-08-11  Brian Weinstein  <bweinstein@apple.com>

Reviewed by Sam Weinig.

        Added support for DRT to support arguments for eventSender.mouseDown and eventSender.mouseUp for Windows.
        https://bugs.webkit.org/show_bug.cgi?id=28166.

        This is a step towards fixing fast/events/mouse-click-events.html on Windows.

        * DumpRenderTree/win/EventSender.cpp:
        (mouseDownCallback):
        (mouseUpCallback):
        (replaySavedEvents):

Canonical link: https://commits.webkit.org/38641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47038 268f45cc-cd09-0410-ab3c-d52691b4dbfc